--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0013.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0013.html
@@ -15,9 +15,9 @@
             <ins class="alt" title="nlp 0.94">ΚΑrνΑι’ιο</ins>
           </span>
         </span>
-        <span id="w_1" class="ocr_word" title="bbox 1880 101 1931 141" lang="grc">
+        <span id="w_1_0" class="ocr_word" title="bbox 1880 101 1931 141">
           <span class="alternatives">
-            <ins title="nlp 2.00">ix</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -66,8 +66,7 @@
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1308 214 1412 258">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mibi</ins>
-            <del title="nlp 0.90">mibi</del>
+            <ins title="nlp 2.00">mihi</ins>
           </span>
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1447 213 1687 257">
@@ -158,8 +157,7 @@
       <span class="ocr_line" title="bbox 191 354 1932 418">
         <span id="w_24" class="ocr_word" title="bbox 191 365 234 407">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iu</ins>
-            <del title="nlp 0.90">iu</del>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 268 363 363 407">
@@ -210,8 +208,7 @@
         </span>
         <span id="w_33" class="ocr_word" title="bbox 1697 369 1788 398">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">osse</ins>
-            <del title="nlp 0.90">osse</del>
+            <ins title="nlp 2.00">esse</ins>
           </span>
         </span>
         <span id="w_34" class="ocr_word" title="bbox 1832 354 1932 399">
@@ -391,8 +388,7 @@
         </span>
         <span id="w_65" class="ocr_word" title="bbox 1124 572 1357 615">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">secuiidum</ins>
-            <del title="nlp 0.90">secuiidum</del>
+            <ins title="nlp 2.00">secundum</ins>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1401 589 1456 615" lang="grc">
@@ -415,8 +411,7 @@
       <span class="ocr_line" title="bbox 190 647 1034 694">
         <span id="w_69" class="ocr_word" title="bbox 190 665 304 694">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nnnc</ins>
-            <del title="nlp 0.90">nnnc</del>
+            <ins title="nlp 2.00">nunc</ins>
           </span>
         </span>
         <span id="w_70" class="ocr_word" title="bbox 335 648 439 693">
@@ -465,8 +460,7 @@
         </span>
         <span id="w_77" class="ocr_word" title="bbox 841 717 1170 761">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ilerculanensis</ins>
-            <del title="nlp 0.90">Ilerculanensis</del>
+            <ins title="nlp 2.00">Herculanensis</ins>
           </span>
         </span>
         <span id="w_78" class="ocr_word" title="bbox 1202 716 1326 772">
@@ -689,8 +683,7 @@
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1626 928 1668 973">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">H</ins>
-            <del title="nlp 0.90">H</del>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 1690 930 1788 986">
@@ -725,8 +718,7 @@
         </span>
         <span id="w_120" class="ocr_word" title="bbox 430 1022 468 1050">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">u.</ins>
-            <del title="nlp 0.90">u.</del>
+            <ins title="nlp 2.00">n.</ins>
           </span>
         </span>
         <span id="w_121" class="ocr_word" title="bbox 496 1005 603 1063">
@@ -774,8 +766,7 @@
         </span>
         <span id="w_128" class="ocr_word" title="bbox 1319 1075 1540 1132">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fiaguetus</ins>
-            <del title="nlp 0.90">fiaguetus</del>
+            <ins title="nlp 2.00">Baguetus</ins>
           </span>
         </span>
         <span id="w_129" class="ocr_word" title="bbox 1584 1089 1696 1118">
@@ -810,8 +801,7 @@
         </span>
         <span id="w_134" class="ocr_word" title="bbox 755 1149 1048 1191">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Lovauiensis.</ins>
-            <del title="nlp 0.90">Lovauiensis.</del>
+            <ins title="nlp 2.00">Lovaniensis.</ins>
           </span>
         </span>
         <span id="w_135" class="ocr_word" title="bbox 1110 1147 1194 1190">
@@ -866,8 +856,7 @@
         </span>
         <span id="w_143" class="ocr_word" title="bbox 780 1222 892 1263">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">euira</ins>
-            <del title="nlp 0.90">euira</del>
+            <ins title="nlp 2.00">enim</ins>
           </span>
         </span>
         <span id="w_144" class="ocr_word" title="bbox 920 1220 1139 1276">
@@ -904,8 +893,7 @@
       <span class="ocr_line" title="bbox 195 1289 1941 1351">
         <span id="w_149" class="ocr_word" title="bbox 195 1294 410 1351">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUigere,</ins>
-            <del title="nlp 0.90">coUigere,</del>
+            <ins title="nlp 2.00">colligere,</ins>
           </span>
         </span>
         <span id="w_150" class="ocr_word" title="bbox 442 1307 550 1348">
@@ -1082,8 +1070,7 @@
         </span>
         <span id="w_180" class="ocr_word" title="bbox 593 1509 737 1551">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">omuia</ins>
-            <del title="nlp 0.90">omuia</del>
+            <ins title="nlp 2.00">omnia</ins>
           </span>
         </span>
         <span id="w_181" class="ocr_word" title="bbox 768 1508 855 1550">
@@ -1279,7 +1266,7 @@
         </span>
         <span id="w_213" class="ocr_word" title="bbox 1223 1720 1265 1763">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_214" class="ocr_word" title="bbox 1294 1735 1335 1764">
@@ -1333,8 +1320,7 @@
         </span>
         <span id="w_222" class="ocr_word" title="bbox 941 1808 1080 1850">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ueque</ins>
-            <del title="nlp 0.90">ueque</del>
+            <ins title="nlp 2.00">neque</ins>
           </span>
         </span>
         <span id="w_223" class="ocr_word" title="bbox 1124 1794 1275 1836">
@@ -1345,8 +1331,7 @@
         </span>
         <span id="w_224" class="ocr_word" title="bbox 1314 1792 1398 1835">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fiiit</ins>
-            <del title="nlp 0.90">fiiit</del>
+            <ins title="nlp 2.00">fuit</ins>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1428 1792 1659 1849">
@@ -1506,8 +1491,7 @@
         </span>
         <span id="w_251" class="ocr_word" title="bbox 967 2009 1150 2051">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">maxirae</ins>
-            <del title="nlp 0.90">maxirae</del>
+            <ins title="nlp 2.00">maxime</ins>
           </span>
         </span>
         <span id="w_252" class="ocr_word" title="bbox 1182 2008 1409 2064">
@@ -1569,9 +1553,9 @@
             <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
-        <span id="w_262" class="ocr_word" title="bbox 1672 2078 1948 2135" lang="grc">
+        <span id="w_262_0" class="ocr_word" title="bbox 1672 2078 1948 2135">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἰμαρμένης,</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1602,8 +1586,7 @@
         </span>
         <span id="w_267" class="ocr_word" title="bbox 1074 2153 1118 2194">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iu</ins>
-            <del title="nlp 0.90">iu</del>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
         <span id="w_268" class="ocr_word" title="bbox 1143 2151 1350 2194">
@@ -1614,8 +1597,7 @@
         </span>
         <span id="w_269" class="ocr_word" title="bbox 1370 2150 1524 2194">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Amial.</ins>
-            <del title="nlp 0.90">Amial.</del>
+            <ins title="nlp 2.00">Annal.</ins>
           </span>
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1546 2150 1685 2206">
@@ -1661,8 +1643,7 @@
         </span>
         <span id="w_277" class="ocr_word" title="bbox 654 2226 815 2281">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">optinie</ins>
-            <del title="nlp 0.90">optinie</del>
+            <ins title="nlp 2.00">optime</ins>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 849 2225 900 2266">
@@ -1729,8 +1710,7 @@
         </span>
         <span id="w_288" class="ocr_word" title="bbox 780 2296 990 2352">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">eligeudis</ins>
-            <del title="nlp 0.90">eligeudis</del>
+            <ins title="nlp 2.00">eligendis</ins>
           </span>
         </span>
         <span id="w_289" class="ocr_word" title="bbox 1033 2293 1238 2351">
@@ -1819,19 +1799,18 @@
             <del title="nlp 0.90">quae</del>
           </span>
         </span>
-        <span id="w_303" class="ocr_word" title="bbox 1690 2366 1848 2407">
+        <span id="w_303_0" class="ocr_word" title="bbox 1690 2366 1848 2407">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rectius</ins>
-            <del title="nlp 0.90">rectius</del>
+            <ins class="alt" title="nlp 2.00">rectius</ins>
+          </span>
+        </span>
+        <span id="w_303_1" class="ocr_word" title="bbox 1690 2366 1848 2407">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">administari</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 202 2439 825 2495">
-        <span id="w_305" class="ocr_word" title="bbox 202 2439 412 2482">
-          <span class="alternatives">
-            <ins title="nlp 2.00">administari</ins>
-          </span>
-        </span>
         <span id="w_306" class="ocr_word" title="bbox 445 2454 569 2495">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">posse</ins>
@@ -1854,8 +1833,7 @@
         </span>
         <span id="w_309" class="ocr_word" title="bbox 484 2713 784 2768">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">graTissimis</ins>
-            <del title="nlp 0.90">graTissimis</del>
+            <ins title="nlp 2.00">gravissimis</ins>
           </span>
         </span>
         <span id="w_310" class="ocr_word" title="bbox 816 2712 1149 2768">
@@ -1872,8 +1850,7 @@
         </span>
         <span id="w_312" class="ocr_word" title="bbox 1539 2711 1771 2757">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fontihus.</ins>
-            <del title="nlp 0.90">fontihus.</del>
+            <ins title="nlp 2.00">fontibus.</ins>
           </span>
         </span>
       </span>
@@ -2162,8 +2139,7 @@
         </span>
         <span id="w_361" class="ocr_word" title="bbox 1817 3096 1953 3139">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">panca</ins>
-            <del title="nlp 0.90">panca</del>
+            <ins title="nlp 2.00">pauca</ins>
           </span>
         </span>
       </span>
