--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0014.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0014.html
@@ -78,19 +78,18 @@
             <del title="nlp 0.90">ad</del>
           </span>
         </span>
-        <span id="w_11" class="ocr_word" title="bbox 1538 307 1822 364">
+        <span id="w_11_0" class="ocr_word" title="bbox 1538 307 1822 364">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chrysippum</ins>
-            <del title="nlp 0.90">Chrysippum</del>
+            <ins class="alt" title="nlp 2.00">Chrysippum</ins>
+          </span>
+        </span>
+        <span id="w_11_1" class="ocr_word" title="bbox 1538 307 1822 364">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">rettulerim</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 251 377 1422 436">
-        <span id="w_13" class="ocr_word" title="bbox 251 377 373 420">
-          <span class="alternatives">
-            <ins title="nlp 2.00">rettulerim</ins>
-          </span>
-        </span>
         <span id="w_14" class="ocr_word" title="bbox 405 392 564 433">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quaeve</ins>
@@ -1304,8 +1303,7 @@
         </span>
         <span id="w_212" class="ocr_word" title="bbox 1141 2014 1308 2056">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUum</ins>
-            <del title="nlp 0.90">nuUum</del>
+            <ins title="nlp 2.00">nullum</ins>
           </span>
         </span>
         <span id="w_213" class="ocr_word" title="bbox 1334 2013 1563 2070">
@@ -1347,8 +1345,7 @@
         </span>
         <span id="w_220" class="ocr_word" title="bbox 831 2085 1040 2128">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUocati.</ins>
-            <del title="nlp 0.90">coUocati.</del>
+            <ins title="nlp 2.00">collocati.</ins>
           </span>
         </span>
         <span id="w_221" class="ocr_word" title="bbox 1103 2085 1243 2127">
@@ -1463,8 +1460,7 @@
         </span>
         <span id="w_240" class="ocr_word" title="bbox 777 2228 867 2270">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">siue</ins>
-            <del title="nlp 0.90">siue</del>
+            <ins title="nlp 2.00">sine</ins>
           </span>
         </span>
         <span id="w_241" class="ocr_word" title="bbox 904 2231 1179 2284">
@@ -2173,16 +2169,11 @@
         </span>
         <span id="w_363" class="ocr_word" title="bbox 1914 3079 1981 3122">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">de-</ins>
+            <ins title="nlp 2.00">dedisse,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 247 3151 1978 3210">
-        <span id="w_364" class="ocr_word" title="bbox 247 3152 370 3209">
-          <span class="alternatives">
-            <ins title="nlp 2.00">dedisse,</ins>
-          </span>
-        </span>
         <span id="w_365" class="ocr_word" title="bbox 403 3153 515 3196">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">credi</ins>
