--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0016.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0016.html
@@ -10,23 +10,21 @@
   <body>
     <div class="ocr_page" id="i0016.png">
       <span class="ocr_line" title="bbox 247 144 1248 185">
-        <span id="w_0" class="ocr_word" title="bbox 247 144 315 184">
+        <span id="w_0_0" class="ocr_word" title="bbox 247 144 315 184">
           <span class="alternatives">
-            <ins title="nlp 2.00">xii</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_1" class="ocr_word" title="bbox 983 149 1248 185">
+        <span id="w_0_1" class="ocr_word" title="bbox 247 144 315 184">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">PRAEFATIO</ins>
-            <del title="nlp 0.90">PRAEFATIO</del>
+            <ins class="alt" title="nlp 2.00">ΧΙΙ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 246 255 1979 313">
         <span id="w_2" class="ocr_word" title="bbox 246 256 431 299">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iiendam</ins>
-            <del title="nlp 0.90">iiendam</del>
+            <ins title="nlp 2.00">nendum</ins>
           </span>
         </span>
         <span id="w_3" class="ocr_word" title="bbox 462 259 545 312">
@@ -43,8 +41,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 700 255 979 298">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">refutatioDes</ins>
-            <del title="nlp 0.90">refutatioDes</del>
+            <ins title="nlp 2.00">refutationes</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1023 256 1279 312">
@@ -401,8 +398,7 @@
         </span>
         <span id="w_65" class="ocr_word" title="bbox 1760 684 1980 739">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">couiphira</ins>
-            <del title="nlp 0.90">couiphira</del>
+            <ins title="nlp 2.00">complura</ins>
           </span>
         </span>
       </span>
@@ -694,8 +690,7 @@
         </span>
         <span id="w_117" class="ocr_word" title="bbox 1725 1039 1984 1083">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Plutarcbus</ins>
-            <del title="nlp 0.90">Plutarcbus</del>
+            <ins title="nlp 2.00">Plutarchus</ins>
           </span>
         </span>
       </span>
@@ -720,8 +715,7 @@
         </span>
         <span id="w_121" class="ocr_word" title="bbox 1000 1109 1186 1152">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Famaue</ins>
-            <del title="nlp 0.90">Famaue</del>
+            <ins title="nlp 2.00">Famane</ins>
           </span>
         </span>
         <span id="w_122" class="ocr_word" title="bbox 1206 1109 1381 1166">
@@ -764,8 +758,7 @@
         </span>
         <span id="w_128" class="ocr_word" title="bbox 753 1183 1006 1239">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">argumeuta</ins>
-            <del title="nlp 0.90">argumeuta</del>
+            <ins title="nlp 2.00">argumenta</ins>
           </span>
         </span>
         <span id="w_129" class="ocr_word" title="bbox 1044 1182 1098 1224">
@@ -794,8 +787,7 @@
         </span>
         <span id="w_133" class="ocr_word" title="bbox 1765 1181 1810 1223">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ui</ins>
-            <del title="nlp 0.90">ui</del>
+            <ins title="nlp 2.00">ni</ins>
           </span>
         </span>
         <span id="w_134" class="ocr_word" title="bbox 1843 1181 1982 1237">
@@ -820,8 +812,7 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 514 1267 602 1295">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uon</ins>
-            <del title="nlp 0.90">uon</del>
+            <ins title="nlp 2.00">non</ins>
           </span>
         </span>
         <span id="w_138" class="ocr_word" title="bbox 633 1267 761 1309">
@@ -950,17 +941,11 @@
         </span>
         <span id="w_158" class="ocr_word" title="bbox 1896 1394 1984 1438">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Sci-</ins>
+            <ins title="nlp 2.00">Scilicet</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 243 1465 1983 1524">
-        <span id="w_159" class="ocr_word" title="bbox 243 1468 344 1512">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">licet</ins>
-            <del title="nlp 0.90">Scilicet</del>
-          </span>
-        </span>
         <span id="w_160" class="ocr_word" title="bbox 375 1467 531 1511">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">mirum</ins>
@@ -999,8 +984,7 @@
         </span>
         <span id="w_166" class="ocr_word" title="bbox 1499 1466 1625 1509">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uuius</ins>
-            <del title="nlp 0.90">uuius</del>
+            <ins title="nlp 2.00">unius</ins>
           </span>
         </span>
         <span id="w_167" class="ocr_word" title="bbox 1650 1467 1738 1509">
@@ -1059,9 +1043,9 @@
             <del title="nlp 0.90">primis</del>
           </span>
         </span>
-        <span id="w_176" class="ocr_word" title="bbox 1721 1553 1984 1595">
+        <span id="w_176_0" class="ocr_word" title="bbox 1721 1553 1984 1595">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,repugnantiarum"</ins>
+            <ins class="alt" title="nlp 2.00">,,repugnantiarum“</ins>
           </span>
         </span>
       </span>
@@ -1098,8 +1082,7 @@
         </span>
         <span id="w_183" class="ocr_word" title="bbox 1228 1608 1455 1652">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Cleauthes</ins>
-            <del title="nlp 0.90">Cleauthes</del>
+            <ins title="nlp 2.00">Cleanthes</ins>
           </span>
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1492 1608 1798 1665">
@@ -1142,14 +1125,12 @@
         </span>
         <span id="w_190" class="ocr_word" title="bbox 1016 1680 1136 1723">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uuUa</ins>
-            <del title="nlp 0.90">uuUa</del>
+            <ins title="nlp 2.00">nulla</ins>
           </span>
         </span>
         <span id="w_191" class="ocr_word" title="bbox 1179 1680 1354 1722">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">omuino</ins>
-            <del title="nlp 0.90">omuino</del>
+            <ins title="nlp 2.00">omnino</ins>
           </span>
         </span>
         <span id="w_192" class="ocr_word" title="bbox 1397 1680 1559 1722">
@@ -1198,8 +1179,7 @@
         </span>
         <span id="w_199" class="ocr_word" title="bbox 844 1751 1133 1809">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iutellegatur,</ins>
-            <del title="nlp 0.90">iutellegatur,</del>
+            <ins title="nlp 2.00">intellegatur,</ins>
           </span>
         </span>
         <span id="w_200" class="ocr_word" title="bbox 1164 1750 1268 1793">
@@ -1259,8 +1239,7 @@
         </span>
         <span id="w_209" class="ocr_word" title="bbox 844 1823 1102 1865">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Phitarchus</ins>
-            <del title="nlp 0.90">Phitarchus</del>
+            <ins title="nlp 2.00">Plutarchus</ins>
           </span>
         </span>
         <span id="w_210" class="ocr_word" title="bbox 1134 1823 1263 1866">
@@ -1352,8 +1331,7 @@
       <span class="ocr_line" title="bbox 245 1964 1983 2016">
         <span id="w_224" class="ocr_word" title="bbox 245 1967 356 2010">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Deiu</ins>
-            <del title="nlp 0.90">Deiu</del>
+            <ins title="nlp 2.00">Dein</ins>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 386 1967 644 2010">
@@ -1376,8 +1354,7 @@
         </span>
         <span id="w_228" class="ocr_word" title="bbox 972 1965 1120 2008">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iufert:</ins>
-            <del title="nlp 0.90">iufert:</del>
+            <ins title="nlp 2.00">infert:</ins>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 1166 1966 1313 2016" lang="grc">
@@ -1417,9 +1394,14 @@
             <ins class="alt" title="nlp 1.00">Χρύσιππος</ins>
           </span>
         </span>
-        <span id="w_236" class="ocr_word" title="bbox 554 2038 656 2082" lang="grc">
+        <span id="w_236_0" class="ocr_word" title="bbox 554 2038 656 2082">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατ ’</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_236_1" class="ocr_word" title="bbox 554 2038 656 2082">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
         <span id="w_237" class="ocr_word" title="bbox 684 2038 983 2094" lang="grc">
@@ -1450,11 +1432,6 @@
         <span id="w_242" class="ocr_word" title="bbox 1716 2052 1796 2080" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_243" class="ocr_word" title="bbox 1844 2052 1985 2094" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πυρὸς</ins>
           </span>
         </span>
       </span>
@@ -1531,14 +1508,12 @@
         </span>
         <span id="w_256" class="ocr_word" title="bbox 633 2180 853 2237">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Autipatri</ins>
-            <del title="nlp 0.90">Autipatri</del>
+            <ins title="nlp 2.00">Antipatri</ins>
           </span>
         </span>
         <span id="w_257" class="ocr_word" title="bbox 897 2182 1046 2223">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coutra</ins>
-            <del title="nlp 0.90">coutra</del>
+            <ins title="nlp 2.00">contra</ins>
           </span>
         </span>
         <span id="w_258" class="ocr_word" title="bbox 1078 2179 1355 2236">
@@ -1555,14 +1530,12 @@
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1474 2180 1775 2236">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chrysippura,</ins>
-            <del title="nlp 0.90">Chrysippura,</del>
+            <ins title="nlp 2.00">Chrysippum,</ins>
           </span>
         </span>
         <span id="w_261" class="ocr_word" title="bbox 1816 2180 1983 2222">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUum</ins>
-            <del title="nlp 0.90">nuUum</del>
+            <ins title="nlp 2.00">nullum</ins>
           </span>
         </span>
       </span>
@@ -1605,8 +1578,7 @@
         </span>
         <span id="w_268" class="ocr_word" title="bbox 1229 2254 1340 2295">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">snnt.</ins>
-            <del title="nlp 0.90">snnt.</del>
+            <ins title="nlp 2.00">sunt.</ins>
           </span>
         </span>
         <span id="w_269" class="ocr_word" title="bbox 1401 2251 1513 2294">
@@ -1654,8 +1626,7 @@
         </span>
         <span id="w_276" class="ocr_word" title="bbox 738 2324 899 2367">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nemiui</ins>
-            <del title="nlp 0.90">nemiui</del>
+            <ins title="nlp 2.00">nemini</ins>
           </span>
         </span>
         <span id="w_277" class="ocr_word" title="bbox 930 2323 1286 2380">
@@ -1704,8 +1675,7 @@
         </span>
         <span id="w_284" class="ocr_word" title="bbox 935 2396 1123 2450">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">carpjtur</ins>
-            <del title="nlp 0.90">carpjtur</del>
+            <ins title="nlp 2.00">carpitur</ins>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 1155 2394 1271 2450">
@@ -1791,8 +1761,7 @@
       <span class="ocr_line" title="bbox 246 2539 1659 2595">
         <span id="w_299" class="ocr_word" title="bbox 246 2543 451 2595">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">specteut,</ins>
-            <del title="nlp 0.90">specteut,</del>
+            <ins title="nlp 2.00">spectent,</ins>
           </span>
         </span>
         <span id="w_300" class="ocr_word" title="bbox 483 2539 536 2581">
@@ -1926,8 +1895,7 @@
         </span>
         <span id="w_322" class="ocr_word" title="bbox 1243 2680 1424 2738">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">siugulis</ins>
-            <del title="nlp 0.90">siugulis</del>
+            <ins title="nlp 2.00">singulis</ins>
           </span>
         </span>
         <span id="w_323" class="ocr_word" title="bbox 1456 2679 1663 2735">
@@ -1961,9 +1929,14 @@
             <ins title="nlp 2.00">„comm.</ins>
           </span>
         </span>
-        <span id="w_328" class="ocr_word" title="bbox 975 2752 1254 2795">
+        <span id="w_328_0" class="ocr_word" title="bbox 975 2752 1254 2795">
           <span class="alternatives">
-            <ins title="nlp 2.00">notitiarum"</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_328_1" class="ocr_word" title="bbox 975 2752 1254 2795">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">notitiarum“</ins>
           </span>
         </span>
         <span id="w_329" class="ocr_word" title="bbox 1285 2767 1347 2808">
@@ -1995,12 +1968,6 @@
             <del title="nlp 0.90">igne</del>
           </span>
         </span>
-        <span id="w_334" class="ocr_word" title="bbox 1838 2750 1984 2792">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mundi</ins>
-            <del title="nlp 0.90">mundi</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 247 2820 1983 2883">
         <span id="w_335" class="ocr_word" title="bbox 247 2826 406 2868">
@@ -2017,7 +1984,7 @@
         </span>
         <span id="w_337" class="ocr_word" title="bbox 613 2823 682 2882" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
         <span id="w_338" class="ocr_word" title="bbox 714 2836 885 2881" lang="grc">
@@ -2168,8 +2135,7 @@
         </span>
         <span id="w_364" class="ocr_word" title="bbox 1023 2969 1274 3025">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">argumeuto</ins>
-            <del title="nlp 0.90">argumeuto</del>
+            <ins title="nlp 2.00">argumento</ins>
           </span>
         </span>
         <span id="w_365" class="ocr_word" title="bbox 1306 2964 1585 3008">
@@ -2212,8 +2178,7 @@
         </span>
         <span id="w_371" class="ocr_word" title="bbox 554 3041 827 3082">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">contineutur</ins>
-            <del title="nlp 0.90">contineutur</del>
+            <ins title="nlp 2.00">continentur</ins>
           </span>
         </span>
         <span id="w_372" class="ocr_word" title="bbox 866 3038 1151 3094">
@@ -2268,8 +2233,7 @@
         </span>
         <span id="w_380" class="ocr_word" title="bbox 678 3112 723 3156">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iu</ins>
-            <del title="nlp 0.90">iu</del>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
         <span id="w_381" class="ocr_word" title="bbox 735 3109 1059 3155">
